completely redid the text format in game, also completely redid the way text components are generated and used. this was a LOT of changes